--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>One Word Story Maker</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
+  <body class="background">
     <div class="container">
       <h1>One Word Story Maker</h1>
       <div id="story"></div>
