App Updates + Style

--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
     <div class="container">
       <h1>One Word Story Maker</h1>
       <div id="story"></div>
+
       <input type="text" id="userInput" placeholder="Type a word" />
       <button id="submitBtn">Add Word</button>
+      <div class="tooltip">
+        <div class="icon">i</div>
+        <div class="tooltiptext">Click on story to copy it!</div>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
