--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <div class="container">
       <h1>One Word Story Maker</h1>
       <div id="story"></div>
-
       <input type="text" id="userInput" placeholder="Type a word" />
       <button id="submitBtn">Add Word</button>
       <div class="tooltip">
@@ -18,6 +17,7 @@
         <div class="tooltiptext">Click on story to copy it!</div>
       </div>
     </div>
+    <audio id="loopAudio" src="/audio/loop.mp3" loop></audio>
     <script src="script.js"></script>
   </body>
 </html>
